AWS Pipeline Project/ceg3120-essentials-Seth-Lyall/Project3/lyall-lb-cf.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Creates 2 instances and 1 VPC.  Each instance gets a private IPon it's subnet and installs required software before logon.  The proxy server gets a public IP as does a NAT gateway.  The backend servers use the NAT gateway for world communications, but they do not have individual public IPs.
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: "AWS::EC2::KeyPair::KeyName"
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
Mappings:
  AWSRegionAMI: # AMI for Ubuntu server in each supported region
    us-east-1: # N. Virginia
      # AMI ID for Ubuntu 24.04 LTS (HVM), SSD Volume Type
      HVM64: ami-0b6c6ebed2801a5cb
Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 192.168.0.0/23
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: LB-VPC
  PublicSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.0.0/24
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: LB-public-subnet
  PrivateSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.1.0/24
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: LB-private-subnet
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: LB-ig
  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: LB-public-rt
  PublicRouteToIG:
    Type: "AWS::EC2::Route"
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable
  NATIPAddress:
    Type: "AWS::EC2::EIP"
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
  NATGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt "NATIPAddress.AllocationId" #!Ref NATIPAddress
      ConnectivityType: public
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: LB-natgw
  PrivateRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: LB-private-rt
  PrivateRouteToNAT:
    Type: "AWS::EC2::Route"
    DependsOn: NATGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
  PrivateSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable
  ProxyIPAddress:
    Type: "AWS::EC2::EIP"
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref ProxyInstance
  ProxySecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access from trusted sources.  Port 80 or 443 access from appropriate sources
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 192.168.0.0/23 # Allow SSH within the VPC
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 130.108.0.0/16 # Allow SSH within Wright State
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 174.97.0.0/16 # Allow SSH from home
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 192.168.0.0/23 # Allow HTTP within the VPC
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0 # Allow HTTP from anywhere
        - IpProtocol: icmp
          FromPort: "-1"
          ToPort: "-1"
          CidrIp: 0.0.0.0/0 # Allow ICMP from anywhere
        - IpProtocol: tcp
          FromPort: "8080"
          ToPort: "8080"
          CidrIp: 0.0.0.0/0 # Allow TCP for haproxy/stats
        - IpProtocol: tcp
          FromPort: "9000"
          ToPort: "9000"
          CidrIp: 0.0.0.0/0 # Allow TCP for webhook
      Tags:
        - Key: Name
          Value: LB-proxy-sg
  PoolSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access from trusted sources.  Port 80 or 443 access from appropriate sources
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 192.168.0.0/24 # Allow SSH from the proxy
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 192.168.0.0/23 # Allow HTTP from the VPC
        - IpProtocol: icmp
          FromPort: "-1"
          ToPort: "-1"
          CidrIp: 0.0.0.0/0 # Allow ICMP from anywhere
      Tags:
        - Key: Name
          Value: LB-pool-sg
  ProxyInstance:
    Type: "AWS::EC2::Instance"
    DependsOn: PublicRouteToIG
    Properties:
      ImageId: !FindInMap [AWSRegionAMI, !Ref "AWS::Region", HVM64]
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: lb-proxy
      NetworkInterfaces:
        - GroupSet:
            - !Ref ProxySecurityGroup
          DeviceIndex: "0"
          DeleteOnTermination: "true"
          SubnetId: !Ref PublicSubnet
          PrivateIpAddress: 192.168.0.10
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
            apt-get update && \
          # Install haproxy
            apt install -y haproxy && \
          # Install git
            apt-get install -y git && \
          # Set a new hostname
            hostnamectl set-hostname lb-proxy && \
            reboot
  Server1Instance:
    Type: "AWS::EC2::Instance"
    DependsOn: NATGateway
    Properties:
      ImageId: !FindInMap [AWSRegionAMI, !Ref "AWS::Region", HVM64]
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: lb-server1
      NetworkInterfaces:
        - GroupSet:
            - !Ref PoolSecurityGroup
          AssociatePublicIpAddress: "false"
          DeviceIndex: "0"
          DeleteOnTermination: "true"
          SubnetId: !Ref PrivateSubnet
          PrivateIpAddress: 192.168.1.10
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
            apt-get update && \
          # Install git and curl
            apt-get install -y git curl && \
          # Install docker
            curl -fsSL https://get.docker.com -o get-docker.sh && \
            sh ./get-docker.sh && \
          # Set a new hostname
            hostnamectl set-hostname lb-server1 && \
          # Pull & run the website container
            docker pull lyalls2004/the-website:latest
            docker run -d --restart always -p 80:80 --name the-website lyalls2004/the-website:latest
            reboot
  Server2Instance:
    Type: "AWS::EC2::Instance"
    DependsOn: NATGateway
    Properties:
      ImageId: !FindInMap [AWSRegionAMI, !Ref "AWS::Region", HVM64]
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: lb-server2
      NetworkInterfaces:
        - GroupSet:
            - !Ref PoolSecurityGroup
          AssociatePublicIpAddress: "false"
          DeviceIndex: "0"
          DeleteOnTermination: "true"
          SubnetId: !Ref PrivateSubnet
          PrivateIpAddress: 192.168.1.20
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
            apt-get update && \
          # Install git and curl
            apt-get install -y git curl && \
          # Install docker
            curl -fsSL https://get.docker.com -o get-docker.sh && \
            sh ./get-docker.sh && \
          # Set a new hostname
            hostnamectl set-hostname lb-server2 && \
          # Pull & run the website container
            docker pull lyalls2004/the-website:latest
            docker run -d --restart always -p 80:80 --name the-website lyalls2004/the-website:latest
            reboot
  Server3Instance:
    Type: "AWS::EC2::Instance"
    DependsOn: NATGateway
    Properties:
      ImageId: !FindInMap [AWSRegionAMI, !Ref "AWS::Region", HVM64]
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: lb-server3
      NetworkInterfaces:
        - GroupSet:
            - !Ref PoolSecurityGroup
          AssociatePublicIpAddress: "false"
          DeviceIndex: "0"
          DeleteOnTermination: "true"
          SubnetId: !Ref PrivateSubnet
          PrivateIpAddress: 192.168.1.30
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
            apt-get update && \
          # Install git and curl
            apt-get install -y git curl && \
          # Install docker
            curl -fsSL https://get.docker.com -o get-docker.sh && \
            sh ./get-docker.sh && \
          # Set a new hostname
            hostnamectl set-hostname lb-server3 && \
          # Pull & run the website container
            docker pull lyalls2004/the-website:latest
            docker run -d --restart always -p 80:80 --name the-website lyalls2004/the-website:latest
            reboot
